# sparrowhawk

./: .clang-format  AUTHORS.md  BUILD.bazel  MODULE.bazel  Makefile.in  README.md  configure  configure.ac
bazel/: openfst-1.8.4.patch  thrax-1.3.9.patch
documentation/: README.md
src/: Makefile.in
src/include/: Makefile.in
src/include/sparrowhawk/: field_path.h  normalizer.h  numbers.h  protobuf_parser.h  protobuf_serializer.h  record_serializer.h  regexp.h  rule_system.h  sentence_boundary.h  spec_serializer.h  string_utils.h  style_serializer.h
src/lib/: Makefile.in  field_path.cc  io_utils.cc  normalizer.cc  normalizer_utils.cc  numbers.cc  protobuf_parser.cc  protobuf_serializer.cc  record_serializer.cc  regexp.cc  rule_system.cc  sentence_boundary.cc  spec_serializer.cc  string_utils.cc  style_serializer.cc
src/proto/: Makefile.in  items.proto  rule_order.proto  semiotic_classes.proto
