module(name = "sparrowhawk")

bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "openfst", version = "1.8.4")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "thrax", version = "1.3.9")

archive_override(
    module_name = "openfst",
    url = "https://www.openfst.org/twiki/pub/FST/FstDownload/openfst-1.8.4.tar.gz",
    patches = [
        "bazel/openfst-1.8.4.patch",
    ],
    strip_prefix = "openfst-1.8.4",
    patch_strip = 1,
    integrity = "sha256-qOu7bz2S0H5nFQBYdHJRjPyHy3m5plSlqKuy0OspgBY=",
)

archive_override(
    module_name = "thrax",
    url = "https://www.openfst.org/twiki/pub/GRM/ThraxDownload/thrax-1.3.9.tar.gz",
    patch_strip = 1,
    strip_prefix = "thrax-1.3.9",
    patches = [
        "bazel/thrax-1.3.9.patch",
    ],
    integrity = "sha256-Hm7YSnR9M3wo8gZDSFYxIaQ5Q49cwMTeS1h933efGuM=",
)
